feat: added ruff, database session

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,17 @@
 services:
+  db:
+    image: postgres
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 1s
+      timeout: 5s
+      retries: 10
+
   api:
     # Build the image from the Dockerfile in the current directory
     build: .
@@ -6,6 +19,9 @@ services:
     # Host the FastAPI application on port 8000
     ports:
       - "8000:8000"
+    depends_on:
+      db:
+        condition: service_healthy
 
     develop:
       # Create a `watch` configuration to update the app
