--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,12 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard]>=0.115.11",
+    "psycopg2-binary>=2.9.10",
+    "pydantic-settings>=2.8.1",
+    "sqlmodel>=0.0.23",
+]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.9.9",
 ]
